--- a/5. Food Website/Style/style.css
+++ b/5. Food Website/Style/style.css
@@ -7,62 +7,338 @@
 }
 
 * {
-    font-family: 'Nunito', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    outline: none;
-    border: none;
-    text-transform: capitalize;
-    transition: all 0.2s linear;
+    transition: all .2s linear;
+    font-family: 'Nunito', sans-serif;
 }
 
 html {
     font-size: 62.5%;
-    overflow: hidden;
+    overflow-x: hidden;
     scroll-padding-top: 5.5rem;
     scroll-behavior: smooth;
+    text-align: center;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background: #fff;
-    padding: 1rem 7%;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    z-index: 1000;
+    padding: 1rem 7%;
+    background: white;
+    align-items: center;
+    /* box-shadow: 0rem 1rem 1.5rem rgba(0, 0, 0, .1); */
     box-shadow: var(--box-shadow);
+    z-index: 1000;
 }
 
 header .logo {
     color: var(--black);
     font-size: 2.5rem;
-    font-weight: bolder;
+    font-weight: bold;
 }
 
-header .logo i {
+header a i {
     color: var(--green);
+    font-size: 2.5rem;
 }
 
 header .navbar a {
+    color: var(--ligght-clor);
     font-size: 1.7rem;
-    border-radius: 1.7rem;
+    border-radius: .5rem;
     padding: .5rem 1.5rem;
-    color: var(--light-color);
+    /*added from source */
 }
 
-header .navbar a.active,
-header .navbar a:hover {
-    color: #fff;
+header .navbar a:hover,
+header .navbar .active {
     background-color: var(--green);
+    color: white;
 }
 
 header .icons i,
 header .icons a {
+    margin-left: .5rem;
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    border-radius: 50%;
+    background: #eee;
+    text-align: center;
+    font-size: 1.7rem;
+    color: var(--black);
     cursor: pointer;
 }
+
+header .icons i:hover,
+header .icons a:hover {
+    transform: rotate(360deg);
+    background-color: var(--green);
+    transition: 0.2s;
+}
+
+header .icons #menu-bars {
+    display: none;
+}
+
+.popup {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .8);
+    z-index: 1004;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: -110%;
+}
+
+#forms.active {
+    top: 0;
+}
+
+form i {
+    position: absolute;
+    right: 2rem;
+    top: 3rem;
+    font-size: 5rem;
+    color: white;
+    cursor: pointer;
+}
+
+form input {
+    width: 50rem;
+    border: none;
+    border-bottom: .2px solid white;
+    background: none;
+    font-size: 3.5rem;
+}
+
+form input:focus {
+    outline: none;
+    border-bottom: .2px solid white;
+    color: #fff;
+}
+
+.popup #input::placeholder {
+    color: #fff;
+}
+
+.popup label {
+    font-size: 3rem;
+    color: #fff;
+}
+
+.popup label:hover {
+    color: var(--green);
+}
+
+.mainBlock {
+    padding: 2rem 9%;
+}
+
+.blocks {
+    display: flex;
+    align-items: center;
+    /* justify-content: flex-start; */
+    padding-top: 9rem;
+    text-align: center;
+}
+
+.mainBlock .blocks .content {
+    /* padding: 1rem; */
+    flex: 1 1 45rem;
+}
+
+.mainBlock .blocks .image {
+    flex: 1 1 45rem;
+}
+
+.mainBlock .blocks .image img {
+    width: 70%;
+}
+
+.mainBlock .blocks h2 {
+    font-size: 3rem;
+    color: var(--green);
+    font-weight: lighter;
+}
+
+.mainBlock .blocks h1 {
+    font-size: 7rem;
+    color: var(--black);
+}
+
+.mainBlock .blocks p {
+    color: var(--light-color);
+    font-size: 2.2rem;
+    padding: .5rem 0;
+    line-height: 1.5;
+}
+
+.swiper-pagination-bullet-active {
+    background: var(--green);
+}
+
+
+/* 
+.mainBlock {
+    display: flex;
+}
+
+.blocks {
+    margin-top: 5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0;
+    padding-top: 4rem;
+}
+
+.blocks .content {
+    flex: 1 1 45rem;
+    margin-left: 0%;
+}
+
+.blocks .content h2 {
+    color: var(--green);
+    font-size: 2.5rem;
+    padding: 0.1rem 7%;
+    font-weight: lighter;
+}
+
+.blocks .content h1 {
+    color: var(--black);
+    font-size: 7rem;
+    padding: .1rem 7%;
+}
+
+.blocks .content p {
+    color: var(--ligght-clor);
+    font-size: 2.2rem;
+    padding: .1rem 7%;
+    margin-bottom: 2rem;
+}*/
+
+.btn {
+    padding: .8rem 3rem;
+    background-color: var(--black);
+    color: #fff;
+    border-radius: .5rem;
+    font-size: 1.7rem;
+    display: inline-block;
+    /* margin-left: 5rem; */
+}
+
+.btn:hover {
+    background-color: var(--green);
+    padding-right: 4rem;
+    font-size: 1.8rem;
+}
+
+.menu-container {
+    background-color: #eee;
+    padding: 1rem 10%;
+}
+
+.main-holder {
+    /* margin: 2rem; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    gap: 1.5rem;
+    background: #eee;
+}
+
+.holder {
+    background-color: #fff;
+    /* width: 32rem; */
+    height: 38rem;
+    overflow: hidden;
+    position: relative;
+    padding: 2.5rem;
+    text-align: center;
+    border-radius: .5rem;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: var(--box-shadow);
+}
+
+.main-holder .holder:hover .fa-eye {
+    position: absolute;
+    left: 1.5rem;
+}
+
+.main-holder .holder:hover .fa-heart {
+    position: absolute;
+    right: 1.5rem;
+}
+
+.holder img {
+    height: 17rem;
+    margin: 1rem 0;
+}
+
+.menu-container h1 {
+    color: var(--black);
+    font-size: 3rem;
+    margin-bottom: 1.5rem;
+}
+
+.menu-container h2 {
+    color: var(--green);
+    font-size: 1.8rem;
+    margin: .5rem 0;
+}
+
+.menu-container .main-holder h2 {
+    color: var(--black);
+    font-size: 2.5rem;
+}
+
+.menu-container .main-holder .stars {
+    color: var(--green);
+    font-size: 1.7rem;
+    margin: 1.5rem 0;
+}
+
+.menu-container .main-holder span {
+    color: var(--green);
+    font-size: 2rem;
+    font-weight: bolder;
+}
+
+.menu-container .main-holder .fa-heart,
+.menu-container .main-holder .fa-eye {
+    background-color: #eee;
+    color: var(--black);
+    font-size: 2rem;
+    border-radius: 50%;
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+}
+
+.menu-container .main-holder .fa-heart:hover,
+.menu-container .main-holder .fa-eye:hover {
+    background-color: var(--green);
+    color: #fff;
+}
+
+.menu-container .main-holder .fa-heart {
+    position: absolute;
+    right: -15rem;
+}
+
+.menu-container .main-holder .fa-eye {
+    position: absolute;
+    left: -15rem;
+}
+
+
+/* 
+.about .block img {
+    width: 100rem;
+    width: 100rem;
+} */
